@@ -42,3 +42,4 @@
 11-17 | Sprint 4 | Added a 'Default' to main GUI that allows the user to load predefined destination paths
 11-17 | Sprint 4 | Small cosmetic and design oriented fixes applied to FrontEndGUI and other classes
 11-23 | Sprint 4 | Added a 'Test Fixtures Preferences' window that allows user to specify their own preferences for the test fixtures
+11-24 | Sprint 4 | Added more functionality to 'Test Fixture Preferences' window to attach csv files to methods for testing
